# actix-simple

./: Cargo.toml
webclient/: Cargo.toml  LICENSE_MIT
webclient/src/: errors.rs  lib.rs
webclient/src/models/: course.rs
webservice/: .env  Cargo.toml
webservice/src/: .env  db_access.rs  error.rs  handlers.rs  routers.rs
webservice/src/dbaccess/: course.rs  db_access.rs  mod.rs
webservice/src/handlers/: course.rs
webservice/src/models/: course.rs
