[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teachers-service"

[dependencies]
actix-web = "4.0.0-rc.2"
actix-rt = "2.6.0"
serde = {version = "1.0.132",features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
openssl = {version="0.10.38",feathures = ["vendored"]}
sqlx = {version = "0.5.10",default_features = false,features = ["postgres","runtime-tokio-rustls","macros","chrono",]}

[[bin]]
name = "server1"

[[bin]]
name = "teachers-service"